--- a/HitList2/Base.lproj/Main.storyboard
+++ b/HitList2/Base.lproj/Main.storyboard
@@ -21,13 +21,13 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="141"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="T7M-L3-10k" id="59Y-om-poZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="140.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="141"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c9s-4e-Pa0">
-                                            <rect key="frame" x="536" y="55.5" width="36" height="20.5"/>
+                                            <rect key="frame" x="536" y="56" width="36" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hqO-xn-H7v">
@@ -44,9 +44,9 @@
                                             </variation>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pLf-sd-OrE">
-                                            <rect key="frame" x="140" y="55.5" width="45" height="20.5"/>
+                                            <rect key="frame" x="140" y="56" width="45" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -150,13 +150,13 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aQp-0Y-G2S">
                                             <rect key="frame" x="0.0" y="0.0" width="90" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5su-mW-rR8">
                                             <rect key="frame" x="0.0" y="167" width="90" height="13"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gad-tM-jGy">
@@ -250,6 +250,12 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="ws1-H5-9Fq"/>
+                                    <barButtonItem title="Pick Color" id="kRs-du-y9T">
+                                        <connections>
+                                            <action selector="pickColorTapped:" destination="gVr-Vw-60y" id="fjA-Ky-nzW"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="0M6-c0-JzL"/>
                                     <barButtonItem title="Clear" id="dLc-Bo-KoF">
                                         <connections>
                                             <action selector="clearImage:" destination="gVr-Vw-60y" id="oEQ-kr-XXz"/>
@@ -264,30 +270,51 @@
                                 </items>
                             </toolbar>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drawing Saved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JbZ-xs-43D">
-                                <rect key="frame" x="213" y="284.5" width="174" height="31.5"/>
+                                <rect key="frame" x="213" y="285" width="174" height="31"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j8H-XZ-wzO">
                                 <rect key="frame" x="0.0" y="20" width="600" height="536"/>
                             </imageView>
+                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XAd-ty-aYb" customClass="SwiftHSVColorPicker" customModule="HitList2" customModuleProvider="target">
+                                <rect key="frame" x="150" y="150" width="300" height="300"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="ZHX-3Q-6sf"/>
+                                    <constraint firstAttribute="width" constant="300" id="hd9-mZ-NFQ"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CON-ta-B0C">
+                                <rect key="frame" x="267" y="490" width="66" height="30"/>
+                                <state key="normal" title="Get Color"/>
+                                <connections>
+                                    <action selector="getSelectedColor:" destination="gVr-Vw-60y" eventType="touchUpInside" id="45A-42-Uh7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="j8H-XZ-wzO" secondAttribute="trailing" id="0ba-d3-iNs"/>
                             <constraint firstItem="j8H-XZ-wzO" firstAttribute="leading" secondItem="5Us-aZ-Oaj" secondAttribute="leading" id="5hN-hB-GKx"/>
+                            <constraint firstItem="XAd-ty-aYb" firstAttribute="centerY" secondItem="5Us-aZ-Oaj" secondAttribute="centerY" id="5oW-on-Rdb"/>
+                            <constraint firstItem="XAd-ty-aYb" firstAttribute="centerX" secondItem="5Us-aZ-Oaj" secondAttribute="centerX" id="9xm-pT-HCm"/>
                             <constraint firstItem="0Ow-Ms-LW7" firstAttribute="leading" secondItem="5Us-aZ-Oaj" secondAttribute="leading" id="MHw-9a-QdC"/>
                             <constraint firstAttribute="trailing" secondItem="0Ow-Ms-LW7" secondAttribute="trailing" id="OUz-20-MIT"/>
                             <constraint firstItem="0Ow-Ms-LW7" firstAttribute="top" secondItem="j8H-XZ-wzO" secondAttribute="bottom" id="PFT-4D-X7h"/>
                             <constraint firstItem="JbZ-xs-43D" firstAttribute="centerX" secondItem="5Us-aZ-Oaj" secondAttribute="centerX" id="SIJ-RU-5Rf"/>
                             <constraint firstItem="Y78-eO-3VV" firstAttribute="top" secondItem="0Ow-Ms-LW7" secondAttribute="bottom" id="UZ7-Oh-lix"/>
+                            <constraint firstItem="CON-ta-B0C" firstAttribute="centerX" secondItem="5Us-aZ-Oaj" secondAttribute="centerX" id="abG-Dt-Bse"/>
                             <constraint firstItem="JbZ-xs-43D" firstAttribute="centerY" secondItem="5Us-aZ-Oaj" secondAttribute="centerY" id="noD-Q3-5Ih"/>
+                            <constraint firstItem="CON-ta-B0C" firstAttribute="top" secondItem="XAd-ty-aYb" secondAttribute="bottom" constant="40" id="tSY-Vn-i2M"/>
                             <constraint firstItem="j8H-XZ-wzO" firstAttribute="top" secondItem="3V1-Wv-dgC" secondAttribute="bottom" id="xjr-hb-1Dc"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="canvas" destination="j8H-XZ-wzO" id="QqA-kT-8vQ"/>
+                        <outlet property="colorButtonOutlet" destination="CON-ta-B0C" id="cJT-HF-0GX"/>
+                        <outlet property="colorPicker" destination="XAd-ty-aYb" id="Vfj-2z-afq"/>
                         <outlet property="gestureNameLabel" destination="JbZ-xs-43D" id="wPQ-8Y-gBh"/>
                     </connections>
                 </viewController>
