--- a/HitList2/Base.lproj/Main.storyboard
+++ b/HitList2/Base.lproj/Main.storyboard
@@ -275,8 +275,9 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j8H-XZ-wzO">
-                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j8H-XZ-wzO">
+                                <rect key="frame" x="0.0" y="106" width="600" height="450"/>
+                                <gestureRecognizers/>
                             </imageView>
                             <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XAd-ty-aYb" customClass="SwiftHSVColorPicker" customModule="HitList2" customModuleProvider="target">
                                 <rect key="frame" x="150" y="150" width="300" height="300"/>
@@ -295,6 +296,7 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="j8H-XZ-wzO" secondAttribute="trailing" id="0ba-d3-iNs"/>
                             <constraint firstItem="j8H-XZ-wzO" firstAttribute="leading" secondItem="5Us-aZ-Oaj" secondAttribute="leading" id="5hN-hB-GKx"/>
@@ -310,6 +312,9 @@
                             <constraint firstItem="CON-ta-B0C" firstAttribute="top" secondItem="XAd-ty-aYb" secondAttribute="bottom" constant="40" id="tSY-Vn-i2M"/>
                             <constraint firstItem="j8H-XZ-wzO" firstAttribute="top" secondItem="3V1-Wv-dgC" secondAttribute="bottom" id="xjr-hb-1Dc"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="D6Y-w5-XR5" appends="YES" id="Ko9-1X-UNE"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="canvas" destination="j8H-XZ-wzO" id="QqA-kT-8vQ"/>
@@ -319,6 +324,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bio-oR-hF0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="D6Y-w5-XR5">
+                    <connections>
+                        <action selector="pinched:" destination="gVr-Vw-60y" id="1tR-Cp-th0"/>
+                    </connections>
+                </pinchGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2717" y="407"/>
         </scene>
